--- a/index.html
+++ b/index.html
@@ -49,19 +49,24 @@
         <article>
             <h1 class="title">Jingyuan (Leo) Chen</h1>
             <div class="divider"></div>
-            <p>Hi! I’m an incoming PhD student at Princeton University. I was an undergraduate at UNC-Chapel Hill majoring in Computer Science &amp; Mathematics. In
+            <p>Hi! I’m a PhD student at Princeton University advised by Professor Amit Levy. I was an undergraduate at UNC-Chapel Hill majoring in Computer Science &amp; Mathematics. In
                 the past, I’ve been working as a research assistant under the supervision of Professor <a
                    href="https://jamesanderson.web.unc.edu/">James Anderson</a>, Professor <a
                    href="https://www.cs.unc.edu/~smithfd/">F. Donelson Smith</a>, and Professor <a
                    href="https://www.cs.unc.edu/~nirjon/">Shahriar Nirjon</a>. My research interests span a wide range
-                of topics in <strong>Systems</strong> and <strong>AI</strong>, including Distributed Systems,
-                Cloud Computing, Bayesian Machine Learning, etc. I am passionate about bringing the
-                progress in Systems and AI together.</p>
+                of topics in <strong>Systems</strong>, <strong>Security</strong> and <strong>Programming Languages</strong>. I am currently
+                 passionate about topics such as verification, verifiable computation, program analysis, decentralized systems, etc.</p>
             <p>Find me at <a href="mailto: leocjy105@gmail.com"> leocjy105@gmail.com</a> , or <a
                    href="https://github.com/leochanj105">My Github</a>! Here is my <a
                    href="https://leochanj105.github.io/assets/CV_rev1.pdf">CV</a>.</p>
             <h2 id="publications">Publications</h2>
             <ol>
+               <li><em>	
+                  Making Powerful Enemies on NVIDIA GPUs.</em> <br />Tyler Yandrofski, <strong>Jingyuan Chen</strong>, 
+                  Nathan Otterness, James H Anderson, F Donelson Smith. <br /> <em>2022 IEEE Real-Time Systems Symposium (RTSS 2022) </em><br />
+                        <a
+                       href="https://www.cs.unc.edu/~otternes/papers/rtss2022.pdf">[paper]</a>
+                </li> <br />
                 <li><em>Minimizing DAG Utilization by Exploiting SMT.</em> <br />Sims Hill Osborne, Joshua Bakita,
                     <strong>Jingyuan Chen</strong>, Tyler Yandrofski, James H. Anderson. <br /> <em>2022 IEEE 28th
                         Real-Time and Embedded Technology and Applications Symposium (RTAS 2022) </em><br />
