--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <article>
             <h1 class="title">Jingyuan (Leo) Chen</h1>
             <div class="divider"></div>
-            <p>Hi! I’m a PhD student at Princeton University advised by Professor Amit Levy. I was an undergraduate at UNC-Chapel Hill majoring in Computer Science &amp; Mathematics. In
+            <p>Hi! I’m a PhD student at Princeton University advised by Professor <a href="http://www.amitlevy.com/">Amit Levy</a>. I was an undergraduate at UNC-Chapel Hill majoring in Computer Science &amp; Mathematics. In
                 the past, I’ve been working as a research assistant under the supervision of Professor <a
                    href="https://jamesanderson.web.unc.edu/">James Anderson</a>, Professor <a
                    href="https://www.cs.unc.edu/~smithfd/">F. Donelson Smith</a>, and Professor <a
