--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <h1 class="title">Jingyuan (Leo) Chen</h1>
             <div class="divider"></div>
             <p>Hi! I’m a PhD student at Princeton University advised by Professor <a href="http://www.amitlevy.com/">Amit Levy</a>.  My research interests span a wide range
-                of topics in <strong>Systems</strong>, <strong>Security</strong> and <strong>Programming Languages</strong>. I am currently
-                 passionate about topics such as cloud computing, program languages, decentralized systems, etc. I was an undergraduate at UNC-Chapel Hill majoring in Computer Science &amp; Mathematics. In
+                of topics in <strong>Systems</strong>, <strong>Cloud Computing</strong> and <strong>Programming Languages</strong>. I am currently
+                 passionate about topics such as decentralized systems, program analysis, etc. I was an undergraduate at UNC-Chapel Hill majoring in Computer Science &amp; Mathematics. In
                 the past, I’ve been working as a research assistant under the supervision of Professor <a
                    href="https://jamesanderson.web.unc.edu/">James Anderson</a>, Professor <a
                    href="https://www.cs.unc.edu/~smithfd/">F. Donelson Smith</a>, and Professor <a
