--- a/index.html
+++ b/index.html
@@ -49,13 +49,9 @@
         <article>
             <h1 class="title">Jingyuan (Leo) Chen</h1>
             <div class="divider"></div>
-            <p>Hi! I’m a PhD student at Princeton University advised by Professor <a href="http://www.amitlevy.com/">Amit Levy</a>.  My research interests span a wide range
+            <p>Hi! I’m a PhD candidate at Princeton University advised by Professor <a href="http://www.amitlevy.com/">Amit Levy</a>.  My research interests span a wide range
                 of topics in <strong>Systems</strong>, <strong>Cloud Computing</strong> and <strong>Programming Languages</strong>. I am currently
-                 passionate about topics such as decentralized systems, program analysis, etc. I was an undergraduate at UNC-Chapel Hill majoring in Computer Science &amp; Mathematics. In
-                the past, I’ve been working as a research assistant under the supervision of Professor <a
-                   href="https://jamesanderson.web.unc.edu/">James Anderson</a>, Professor <a
-                   href="https://www.cs.unc.edu/~smithfd/">F. Donelson Smith</a>, and Professor <a
-                   href="https://www.cs.unc.edu/~nirjon/">Shahriar Nirjon</a>.</p>
+                 passionate about using the power of PL tools, such as program analysis and formal verification, to automate the process of reasoning about and solving problems in complex systems, including root-cause debugging, program optimization and performance modeling. </p>
             <p>Find me at <a href="mailto: leocjy105@gmail.com"> leocjy105@gmail.com</a> , or <a
                    href="https://github.com/leochanj105">My Github</a>! Here is my <a
                    href="https://leochanj105.github.io/assets/CV_rev1.pdf">CV</a>.</p>
