--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <article>
             <h1 class="title">Jingyuan (Leo) Chen</h1>
             <div class="divider"></div>
-            <p>Hi! I’m a PhD candidate at Princeton University advised by Professor <a href="http://www.amitlevy.com/">Amit Levy</a>.  My research interests span a wide range
-                of topics in <strong>Systems</strong>, <strong>Cloud Computing</strong> and <strong>Programming Languages</strong>. I am currently
+            <p>Hi! I’m a 3rd-year CS PhD candidate at Princeton University advised by Professor <a href="http://www.amitlevy.com/">Amit Levy</a>.  My research interests span a wide range
+                of topics in <strong>Systems</strong> and <strong>Programming Languages</strong>. I am currently
                  passionate about using the power of PL tools, such as program analysis and formal verification, to automate the process of reasoning about and solving problems in complex systems, including root-cause debugging, program optimization and performance modeling. </p>
             <p>Find me at <a href="mailto: leocjy105@gmail.com"> leocjy105@gmail.com</a> , or <a
                    href="https://github.com/leochanj105">My Github</a>! Here is my <a
