--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                  passionate about using the power of PL tools, such as program analysis and formal verification, to automate the process of reasoning about and solving problems in complex systems, including root-cause debugging, program optimization and performance modeling. </p>
             <p>Find me at <a href="mailto: leocjy105@gmail.com"> leocjy105@gmail.com</a> , or <a
                    href="https://github.com/leochanj105">My Github</a>! Here is my <a
-                   href="https://leochanj105.github.io/assets/CV_rev1.pdf">CV</a>.</p>
+                   href="https://leochanj105.github.io/assets/CV_2024.pdf">CV</a>.</p>
             <h2 id="publications">Publications</h2>
             <ol><li><em>	
                   Making Powerful Enemies on NVIDIA GPUs.</em> <br />Tyler Yandrofski, <strong>Jingyuan Chen</strong>, 
