--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <article>
             <h1 class="title">Jingyuan (Leo) Chen</h1>
             <div class="divider"></div>
-            <p>Hi! I’m a CS PhD candidate at Princeton University advised by Professor <a href="http://www.amitlevy.com/">Amit Levy</a>. I research about <strong>automating</strong> system problem solving with tools such as formal methods and machine learning. I'm currently hacking on the following topics:</p>
+            <p>Hi! I’m a CS PhD candidate at Princeton University advised by Professor <a href="http://www.amitlevy.com/">Amit Levy</a>. I research about <strong>automating</strong> system problem solving with tools such as formal methods and machine learning. I'm generally interested in program analysis, verification, synthesis and debugging. I'm currently hacking on the following topics:</p>
     <ul>
         <li>Automated In-production Debugging</li>
         <li>Automated Performance Bottleneck Analysis</li>
