--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
     <ul>
         <li>Automated In-production Debugging</li>
         <li>Automated Performance Bottleneck Analysis</li>
-        <li>Quantitative Workload-Driven Performance Reasoning</li>
+        <li>Quantitative Workload-Driven Performance Verification</li>
+        <li>Automated Semantic-Preserving Transpilation</li>
     </ul>
             <p>Find me at <a href="mailto: leocjy105@gmail.com"> leocjy105@gmail.com</a> , or <a
                    href="https://github.com/leochanj105">My Github</a>! Here is my <a
