--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <li>Quantitative Workload-Driven Performance Verification</li>
         <li>Automated Semantic-Preserving Transpilation</li>
     </ul>
+    <p>Shoot me an email if you are interested in working together, especially if you are an undergrad!</p>
             <p>Find me at <a href="mailto: leocjy105@gmail.com"> leocjy105@gmail.com</a> , or <a
                    href="https://github.com/leochanj105">My Github</a>! Here is my <a
                    href="https://leochanj105.github.io/assets/CV_202508.pdf">CV</a>.</p>
