--- a/index.html
+++ b/index.html
@@ -59,12 +59,18 @@
     <p>Shoot me an email if you are interested in working together, especially if you are an undergrad!</p>
             <p>Find me at <a href="mailto: leocjy105@gmail.com"> leocjy105@gmail.com</a> , or <a
                    href="https://github.com/leochanj105">My Github</a>! Here is my <a
-                   href="https://leochanj105.github.io/assets/CV_202508.pdf">CV</a>.</p>
+                   href="https://leochanj105.github.io/assets/CV_2025_11.pdf">CV</a>.</p>
             <h2 id="publications">Publications</h2>
             <ol>
 
                 <li><em>	
                   End-to-End Encrypted Applications with Strong Consistency Under Byzantine Actors.</em> <br />Natalie Popescu, Shai Caspin, Leon Schuermann, <strong>Jingyuan Chen</strong>, Amit Levy <br /> <em>To appear in ACSAC '25: The 41st Annual Computer Security Applications Conference, December 2025</em><br />
+                </li>
+                
+                <li><em>	
+                        Incentivizing Side-Channel Freedom with Leakage-Aware Computation. </em> <br/>
+                    Gongqi Huang, <strong>Jingyuan Chen</strong>, Amit Levy <br/>
+                    <em>WACI 2025</em> <br/> <a href="https://asplos-conference.org/WACIs/2025/WACI25-Huang.pdf"> [paper]</a>
                 </li>
                 <li><em>	
                   Making Powerful Enemies on NVIDIA GPUs.</em> <br />Tyler Yandrofski, <strong>Jingyuan Chen</strong>, 
