--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <ol>
 
                 <li><em>	
-                  End-to-End Encrypted Applications with Strong Consistency Under Byzantine Actors.</em> <br />Natalie Popescu, Shai Caspin, Leon Schuermann, <strong>Jingyuan Chen</strong>, Amit Levy <br /> <em>To appear in ACSAC '25: The 41st Annual Computer Security Applications Conference, December 2025</em><br />
+                  End-to-End Encrypted Applications with Strong Consistency Under Byzantine Actors.</em> <br />Natalie Popescu, Shai Caspin, Leon Schuermann, <strong>Jingyuan Chen</strong>, Amit Levy <br /> <em>ACSAC 2025: The 41st Annual Computer Security Applications Conference, December 2025</em><br /> <a href="https://www.amitlevy.com/papers/2025-acsac-scuba.pdf">[paper]</a>
                 </li>
                 
                 <li><em>	
