--- a/index.html
+++ b/index.html
@@ -49,28 +49,20 @@
         <article>
             <h1 class="title">Jingyuan (Leo) Chen</h1>
             <div class="divider"></div>
-            <p>Hi! I’m a CS PhD candidate at Princeton University advised by Professor <a href="http://www.amitlevy.com/">Amit Levy</a>. I research about <strong>automating</strong> system problem solving with tools such as formal methods and machine learning. I'm generally interested in program analysis, verification, synthesis and debugging. I'm currently hacking on the following topics:</p>
+            <p>Hi! I’m a CS PhD candidate at Princeton University advised by Professor <a href="http://www.amitlevy.com/">Amit Levy</a>. I research about <strong>automating</strong> system problem solving with PL+ML. I'm generally interested in program analysis, verification, synthesis and debugging. I'm currently hacking on the following topics:</p>
     <ul>
         <li>Automated In-production Debugging</li>
-        <li>Automated Performance Bottleneck Analysis</li>
-        <li>Quantitative Workload-Driven Performance Verification</li>
-        <li>Automated Semantic-Preserving Transpilation</li>
+        <li>Performance Interfaces with Abstract Simulationn</li>
+        <li>Agents for Automated Debugging and Testing</li>
     </ul>
-    <p>Shoot me an email if you are interested in working together, especially if you are an undergrad!</p>
             <p>Find me at <a href="mailto: leocjy105@gmail.com"> leocjy105@gmail.com</a> , or <a
                    href="https://github.com/leochanj105">My Github</a>! Here is my <a
-                   href="https://leochanj105.github.io/assets/CV_2025_11.pdf">CV</a>.</p>
+                   href="https://leochanj105.github.io/assets/CV_202508.pdf">CV</a>.</p>
             <h2 id="publications">Publications</h2>
             <ol>
 
                 <li><em>	
-                  End-to-End Encrypted Applications with Strong Consistency Under Byzantine Actors.</em> <br />Natalie Popescu, Shai Caspin, Leon Schuermann, <strong>Jingyuan Chen</strong>, Amit Levy <br /> <em>ACSAC 2025: The 41st Annual Computer Security Applications Conference, December 2025</em><br /> <a href="https://www.amitlevy.com/papers/2025-acsac-scuba.pdf">[paper]</a>
-                </li>
-                
-                <li><em>	
-                        Incentivizing Side-Channel Freedom with Leakage-Aware Computation. </em> <br/>
-                    Gongqi Huang, <strong>Jingyuan Chen</strong>, Amit Levy <br/>
-                    <em>WACI 2025</em> <br/> <a href="https://asplos-conference.org/WACIs/2025/WACI25-Huang.pdf"> [paper]</a>
+                  End-to-End Encrypted Applications with Strong Consistency Under Byzantine Actors.</em> <br />Natalie Popescu, Shai Caspin, Leon Schuermann, <strong>Jingyuan Chen</strong>, Amit Levy <br /> <em>To appear in ACSAC '25: The 41st Annual Computer Security Applications Conference, December 2025</em><br />
                 </li>
                 <li><em>	
                   Making Powerful Enemies on NVIDIA GPUs.</em> <br />Tyler Yandrofski, <strong>Jingyuan Chen</strong>, 
